# adk_emu

./: InitAccessoryMode.c  Makefile.am  Makefile.in  adk_com.c  adk_init.c  config.h.in  configure  configure.ac  libusb_adk.c  libusb_adk.h  lsusb.c
